// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AIDrivenRRM should render correctly when IS_MLISA_SA is true 1`] = `
<DocumentFragment>
  .c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c14 svg {
  width: 16px;
  height: 16px;
}

.c14 svg:before {
  content: 'a';
}

.c14 svg path {
  stroke: var(--acx-primary-black);
}

.c14.ant-btn-primary svg path {
  stroke: var(--acx-primary-white) !important;
  fill: var(--acx-primary-white) !important;
}

.c14[disabled] svg path,
.c14.ant-btn-disabled svg path {
  stroke: var(--acx-primary-white);
}

.c14[disabled].ant-btn-default svg path,
.c14.ant-btn-disabled.ant-btn-default svg path,
.c14[disabled].ant-btn-primary svg path,
.c14.ant-btn-disabled.ant-btn-primary svg path {
  stroke: var(--acx-neutrals-40);
}

.c7 {
  padding: calc(var(--acx-descriptions-space) / 2) 0;
}

.c7 .ant-descriptions-row:last-child .ant-descriptions-item {
  padding-bottom: 0;
}

.c7 .ant-descriptions-item {
  padding: 0;
  padding-bottom: calc(var(--acx-body-4-line-height) - var(--acx-body-4-font-size));
}

.c7 .ant-descriptions-item .ant-descriptions-item-container {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c7 .ant-descriptions-item .ant-descriptions-item-container .ant-descriptions-item-label,
.c7 .ant-descriptions-item .ant-descriptions-item-container .ant-descriptions-item-content {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c7 .ant-descriptions-item .ant-descriptions-item-container .ant-descriptions-item-label {
  width: unset;
  color: var(--acx-neutrals-60);
}

.c7 .ant-descriptions-item .ant-descriptions-item-container .ant-descriptions-item-content {
  display: unset;
}

h1.c8.ant-typography {
  line-height: var(--acx-subtitle-1-line-height);
  font-size: var(--acx-subtitle-1-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-1-font-weight);
}

h2.c8.ant-typography {
  line-height: var(--acx-subtitle-2-line-height);
  font-size: var(--acx-subtitle-2-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-2-font-weight);
}

h3.c8.ant-typography {
  line-height: var(--acx-subtitle-3-line-height);
  font-size: var(--acx-subtitle-3-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-3-font-weight);
}

h4.c8.ant-typography {
  line-height: var(--acx-subtitle-4-line-height);
  font-size: var(--acx-subtitle-4-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-4-font-weight);
}

h5.c8.ant-typography {
  line-height: var(--acx-subtitle-5-line-height);
  font-size: var(--acx-subtitle-5-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-5-font-weight);
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c3 {
  --acx-steps-form-steps-title-color: var(--acx-primary-black);
  --acx-steps-form-steps-title-font-size: var(--acx-body-4-font-size);
  --acx-steps-form-steps-title-line-height: var(--acx-body-4-line-height);
  --acx-steps-form-steps-active-title-font-weight: var(--acx-body-font-weight-bold);
  --acx-steps-form-steps-step-size: 12px;
  --acx-steps-form-steps-step-color: var(--acx-accents-orange-50);
  --acx-steps-form-form-title-font-size: var(--acx-headline-3-font-size);
  --acx-steps-form-form-title-font-weight: var(--acx-headline-3-font-weight);
  --acx-steps-form-form-title-line-height: var(--acx-headline-3-line-height);
  --acx-steps-form-form-title-margin-bottom: 16px;
  padding-block-end: calc(var(--acx-steps-form-actions-vertical-space) * 2 + 32px);
}

.c3 .ant-pro-table .ant-pagination {
  position: relative;
  bottom: unset;
  background-color: var(--acx-primary-white);
}

.c4 {
  position: fixed;
  width: calc(( (100% + 20px) - var(--acx-sider-width) - var(--acx-content-horizontal-space) * 2 ) * 4 / 24 - 20px);
  min-width: calc(( (1280px + 20px) - var(--acx-sider-width) - var(--acx-content-horizontal-space) * 2 ) * 4 / 24 - 20px);
  padding-top: calc( var(--acx-steps-form-form-title-line-height) + var(--acx-steps-form-form-title-margin-bottom) + 3px );
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-title {
  padding: 0 0 var(--acx-steps-form-steps-title-line-height) 12px;
  line-height: var(--acx-steps-form-steps-title-line-height);
  font-size: var(--acx-steps-form-steps-title-font-size);
}

.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-active .ant-steps-item-title {
  font-weight: var(--acx-steps-form-steps-active-title-font-weight);
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-title,
.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-wait .ant-steps-item-title {
  color: var(--acx-steps-form-steps-title-color);
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-container .ant-steps-item-tail {
  top: 3px;
  left: unset;
  width: var(--acx-steps-form-steps-step-size);
  padding: 11px 0 0;
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-container .ant-steps-item-tail::after {
  margin: 0 auto;
  display: block;
  background-color: var(--acx-steps-form-steps-step-color);
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-container .ant-steps-item-content {
  min-height: calc(var(--acx-body-4-line-height) * 2);
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-icon {
  width: var(--acx-steps-form-steps-step-size);
  height: var(--acx-steps-form-steps-step-size);
  top: unset;
  margin-top: 3px;
  margin-right: 0px;
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-icon .ant-steps-icon-dot {
  width: var(--acx-steps-form-steps-step-size);
  height: var(--acx-steps-form-steps-step-size);
  border: 1px solid var(--acx-steps-form-steps-step-color);
  background-color: transparent;
  top: unset;
  left: unset;
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-icon .ant-steps-icon-dot::after {
  top: 0;
  left: 0;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: transparent;
  -webkit-transition-property: top,left,background-color;
  transition-property: top,left,background-color;
}

.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-active .ant-steps-item-icon .ant-steps-icon-dot {
  top: unset;
  left: unset;
}

.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-active .ant-steps-item-icon .ant-steps-icon-dot::after {
  width: 10px;
  height: 10px;
  background-color: var(--acx-steps-form-steps-step-color);
}

.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-finish .ant-steps-item-container .ant-steps-item-icon .ant-steps-icon-dot::after {
  top: 1px;
  left: 1px;
  background-color: var(--acx-steps-form-steps-step-color);
}

.c13 {
  position: fixed;
  width: calc( 100% - var(--acx-sider-width) - var(--acx-content-horizontal-space) * 2 );
  min-width: calc( 1280px - var(--acx-sider-width) - var(--acx-content-horizontal-space) * 2 );
  bottom: 0;
  padding: var(--acx-steps-form-actions-vertical-space) 0;
  background-color: var(--acx-neutrals-10);
  z-index: 5;
}

.c13::before {
  content: '';
  position: absolute;
  inset: 0 -100% 0 -100%;
  background-color: var(--acx-neutrals-10);
}

.c13 .ant-space-item .ant-space {
  position: absolute;
  left: 50%;
  bottom: var(--acx-steps-form-actions-vertical-space);
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
}

.c6 {
  font-size: var(--acx-steps-form-form-title-font-size);
  line-height: var(--acx-steps-form-form-title-line-height);
  font-weight: var(--acx-steps-form-form-title-font-weight);
  margin-bottom: var(--acx-steps-form-form-title-margin-bottom) !important;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 5px;
}

.c6 svg {
  width: 16px;
  height: 16px;
}

.c10.ant-typography {
  margin-top: 20px;
  margin-bottom: 12px;
}

.c5 + .c9.ant-typography {
  margin-top: 4px;
}

.c11,
.c11 .ant-list {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c11 .ant-checkbox-wrapper-in-form-item {
  color: var(--acx-neutrals-60);
}

.c11 .indent {
  margin-left: 24px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
}

.c11 .greyText {
  color: var(--acx-neutrals-50);
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: calc( var(--acx-header-height) + var(--acx-content-vertical-space) + (var(--acx-cloudmessagebanner-height) * var(--acx-has-cloudmessagebanner)) );
  z-index: 7;
  background-color: var(--acx-primary-white);
  padding: 0 var(--acx-content-horizontal-space);
  margin: 0 calc(var(--acx-content-horizontal-space) * -1);
}

.c1 .ant-page-header {
  padding: 0;
  margin: 4px 0 var(--acx-content-vertical-space);
}

.c1 .ant-page-header-heading {
  gap: 12px;
}

.c1 .ant-page-header-heading h1 {
  margin-bottom: 0;
}

.c1 .ant-page-header-heading-left {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
}

.c1 .ant-page-header-heading-extra {
  margin: 0;
}

.c1 .ant-page-header-heading-extra > .ant-space {
  gap: 12px !important;
}

.c1 .ant-page-header-heading-title {
  width: 100%;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .ant-page-header-content {
  padding: 6px 0 0;
  color: var(--acx-primary-black);
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c1 .ant-page-header-content .ant-divider-vertical {
  background-color: var(--acx-primary-black);
  margin: 0 0.5em;
  height: 0.9em;
}

.c1 .ant-page-header .ant-breadcrumb {
  line-height: 16px;
}

.c1 .ant-page-header .ant-breadcrumb a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 .ant-page-header .ant-breadcrumb + .ant-page-header-heading {
  margin-top: 3px;
}

.c1 .ant-page-header.has-footer {
  margin-bottom: 0;
}

.c1 .ant-page-header.has-footer .ant-page-header-content {
  padding-bottom: 2px;
}

.c1 .ant-page-header.has-footer .ant-page-header-footer {
  margin-top: 8px;
}

.c2 {
  width: 32px;
  height: 32px;
}

.c12 {
  position: relative;
  min-height: calc( 100vh - 0px - var(--acx-steps-form-actions-vertical-space) * 2 - 32px - var(--acx-content-horizontal-space) );
  border: 1px solid var(--acx-neutrals-25);
  border-radius: 4px;
  padding: 20px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="ant-page-header has-breadcrumb ant-page-header-ghost"
      >
        <nav
          class="ant-breadcrumb"
        >
          <ol>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                AI Assurance
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                AI Analytics
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                <a
                  href="/intentAI"
                >
                  IntentAI
                </a>
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                 
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
          </ol>
        </nav>
        <div
          class="ant-page-header-heading"
        >
          <div
            class="ant-page-header-heading-left"
          >
            <span
              class="ant-page-header-heading-title"
            >
              <svg
                class="c2"
                data-testid="AIDrivenRRM"
              />
              <h1
                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
              >
                AI-Driven RRM
              </h1>
            </span>
          </div>
        </div>
        <div
          class="ant-page-header-content"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
          >
            <span>
              Intent: Client density vs Client throughput
              <div
                class="ant-divider ant-divider-vertical"
                role="separator"
              />
            </span>
            <span>
              Zone: 
            </span>
          </span>
        </div>
      </div>
    </div>
    <section
      class="c3"
      data-testid="steps-form"
    >
      <form
        class="ant-form ant-form-vertical"
        step="0"
      >
        <div
          class="ant-row"
          style="margin-left: -10px; margin-right: -10px;"
        >
          <div
            class="ant-col ant-col-4"
            data-testid="steps-form-steps"
            style="padding-left: 10px; padding-right: 10px;"
          >
            <div
              class="ant-steps ant-steps-vertical c4 ant-steps-dot"
            >
              <div
                class="ant-steps-item ant-steps-item-process ant-steps-item-active"
              >
                <div
                  class="ant-steps-item-container"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Introduction
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Intent Priority
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Settings
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Summary
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-20"
            data-testid="steps-form-body"
            style="padding-left: 10px; padding-right: 10px;"
          >
            <div
              class="ant-row"
              style="margin-left: -10px; margin-right: -10px;"
            >
              <div
                class="ant-col ant-col-15"
                style="padding-left: 10px; padding-right: 10px;"
              >
                <h3
                  class="ant-typography c5 c6"
                >
                  Introduction
                </h3>
                <div
                  class="ant-descriptions c7"
                >
                  <div
                    class="ant-descriptions-view"
                  >
                    <table>
                      <tbody>
                        <tr
                          class="ant-descriptions-row"
                        >
                          <td
                            class="ant-descriptions-item"
                            colspan="1"
                          >
                            <div
                              class="ant-descriptions-item-container"
                            >
                              <span
                                class="ant-descriptions-item-label"
                              >
                                Intent
                              </span>
                              <span
                                class="ant-descriptions-item-content"
                              >
                                Client density vs Client throughput
                              </span>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-descriptions-row"
                        >
                          <td
                            class="ant-descriptions-item"
                            colspan="1"
                          >
                            <div
                              class="ant-descriptions-item-container"
                            >
                              <span
                                class="ant-descriptions-item-label"
                              >
                                Category
                              </span>
                              <span
                                class="ant-descriptions-item-content"
                              >
                                Wi-Fi Client Experience
                              </span>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-descriptions-row"
                        >
                          <td
                            class="ant-descriptions-item"
                            colspan="1"
                          >
                            <div
                              class="ant-descriptions-item-container"
                            >
                              <span
                                class="ant-descriptions-item-label"
                              >
                                Zone
                              </span>
                              <span
                                class="ant-descriptions-item-content"
                              >
                                21_US_Beta_Samsung
                              </span>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-descriptions-row"
                        >
                          <td
                            class="ant-descriptions-item"
                            colspan="1"
                          >
                            <div
                              class="ant-descriptions-item-container"
                            >
                              <span
                                class="ant-descriptions-item-label"
                              >
                                Status
                              </span>
                              <span
                                class="ant-descriptions-item-content"
                              >
                                New
                              </span>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-descriptions-row"
                        >
                          <td
                            class="ant-descriptions-item"
                            colspan="1"
                          >
                            <div
                              class="ant-descriptions-item-container"
                            >
                              <span
                                class="ant-descriptions-item-label"
                              >
                                Last update
                              </span>
                              <span
                                class="ant-descriptions-item-content"
                              >
                                07/10/2023 14:15
                              </span>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <h4
                  class="ant-typography c8 c9 c10"
                >
                  Network Intent plays a crucial role in wireless network design
                </h4>
                <div
                  class="c11"
                >
                  <div
                    class="ant-typography"
                  >
                    <b>
                      High number of clients in a dense network:
                    </b>
                     
                    <span>
                      High client density network requires low interfering channels which fosters improved throughput, lower latency, better signal quality, stable connections, enhanced user experience, longer battery life, efficient spectrum utilization, optimized channel usage, and reduced congestion, leading to higher data rates, higher SNR, consistent performance, and balanced network load.
                    </span>
                  </div>
                  <div
                    class="ant-typography"
                  >
                    <b>
                      High client throughput in sparse network:
                    </b>
                     
                    <span>
                      In sparse networks with high client throughput, moderate interference is manageable due to optimized resource allocation, minimal competition for bandwidth, and strong signal strength. This allows for stable connections and satisfactory performance, outweighing drawbacks of interference.
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-7 ant-col-offset-2"
                style="padding-left: 10px; padding-right: 10px;"
              >
                <div
                  class="c12"
                >
                  <h4
                    class="ant-typography"
                  >
                    Side Notes
                  </h4>
                  <h4
                    class="ant-typography c8 c9 c10"
                  >
                    Benefits
                  </h4>
                  <div
                    class="c11"
                  >
                    <div
                      class="ant-typography"
                    >
                      Low interference fosters improved throughput, lower latency, better signal quality, stable connections, enhanced user experience, longer battery life, efficient spectrum utilization, optimized channel usage, and reduced congestion, leading to higher data rates, higher SNR, consistent performance, and balanced network load.
                    </div>
                  </div>
                  <h4
                    class="ant-typography c8 c9 c10"
                  >
                    Resources:
                  </h4>
                  <div
                    class="c11"
                  >
                    <div
                      class="ant-typography"
                    >
                      <a
                        href="https://www.youtube.com/playlist?list=PLySwoo7u9-KJeAI4VY_2ha4r9tjnqE3Zi"
                        rel="noreferrer"
                        target="_blank"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <svg
                              data-testid="LinkVideoIcon"
                            />
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            RUCKUS AI - AI-Driven RRM Demo
                          </div>
                        </div>
                      </a>
                      <a
                        href="https://docs.commscope.com/bundle/ruckusai-userguide/page/GUID-5D18D735-6D9A-4847-9C6F-8F5091F9B171.html"
                        rel="noreferrer"
                        target="_blank"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <svg
                              data-testid="LinkDocumentIcon"
                            />
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            RUCKUS AI User Guide
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c13"
          data-testid="steps-form-actions"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center "
          >
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn ant-btn-default c14"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 12px;"
                >
                  <button
                    class="ant-btn ant-btn-default c14"
                    hidden=""
                    type="button"
                    value="pre"
                  >
                    <span>
                      Back
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary c14"
                    type="button"
                    value="next"
                  >
                    <span>
                      Next
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
</DocumentFragment>
`;

exports[`AIDrivenRRM should work correctly for statuses other than new/scheduled 1`] = `
<DocumentFragment>
  .c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c13 svg {
  width: 16px;
  height: 16px;
}

.c13 svg:before {
  content: 'a';
}

.c13 svg path {
  stroke: var(--acx-primary-black);
}

.c13.ant-btn-primary svg path {
  stroke: var(--acx-primary-white) !important;
  fill: var(--acx-primary-white) !important;
}

.c13[disabled] svg path,
.c13.ant-btn-disabled svg path {
  stroke: var(--acx-primary-white);
}

.c13[disabled].ant-btn-default svg path,
.c13.ant-btn-disabled.ant-btn-default svg path,
.c13[disabled].ant-btn-primary svg path,
.c13.ant-btn-disabled.ant-btn-primary svg path {
  stroke: var(--acx-neutrals-40);
}

h1.c9.ant-typography {
  line-height: var(--acx-subtitle-1-line-height);
  font-size: var(--acx-subtitle-1-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-1-font-weight);
}

h2.c9.ant-typography {
  line-height: var(--acx-subtitle-2-line-height);
  font-size: var(--acx-subtitle-2-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-2-font-weight);
}

h3.c9.ant-typography {
  line-height: var(--acx-subtitle-3-line-height);
  font-size: var(--acx-subtitle-3-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-3-font-weight);
}

h4.c9.ant-typography {
  line-height: var(--acx-subtitle-4-line-height);
  font-size: var(--acx-subtitle-4-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-4-font-weight);
}

h5.c9.ant-typography {
  line-height: var(--acx-subtitle-5-line-height);
  font-size: var(--acx-subtitle-5-font-size);
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-subtitle-5-font-weight);
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c3 {
  --acx-steps-form-steps-title-color: var(--acx-primary-black);
  --acx-steps-form-steps-title-font-size: var(--acx-body-4-font-size);
  --acx-steps-form-steps-title-line-height: var(--acx-body-4-line-height);
  --acx-steps-form-steps-active-title-font-weight: var(--acx-body-font-weight-bold);
  --acx-steps-form-steps-step-size: 12px;
  --acx-steps-form-steps-step-color: var(--acx-accents-orange-50);
  --acx-steps-form-form-title-font-size: var(--acx-headline-3-font-size);
  --acx-steps-form-form-title-font-weight: var(--acx-headline-3-font-weight);
  --acx-steps-form-form-title-line-height: var(--acx-headline-3-line-height);
  --acx-steps-form-form-title-margin-bottom: 16px;
  padding-block-end: calc(var(--acx-steps-form-actions-vertical-space) * 2 + 32px);
}

.c3 .ant-pro-table .ant-pagination {
  position: relative;
  bottom: unset;
  background-color: var(--acx-primary-white);
}

.c4 {
  position: fixed;
  width: calc(( (100% + 20px) - var(--acx-sider-width) - var(--acx-content-horizontal-space) * 2 ) * 4 / 24 - 20px);
  min-width: calc(( (1280px + 20px) - var(--acx-sider-width) - var(--acx-content-horizontal-space) * 2 ) * 4 / 24 - 20px);
  padding-top: calc( var(--acx-steps-form-form-title-line-height) + var(--acx-steps-form-form-title-margin-bottom) + 3px );
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-title {
  padding: 0 0 var(--acx-steps-form-steps-title-line-height) 12px;
  line-height: var(--acx-steps-form-steps-title-line-height);
  font-size: var(--acx-steps-form-steps-title-font-size);
}

.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-active .ant-steps-item-title {
  font-weight: var(--acx-steps-form-steps-active-title-font-weight);
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-title,
.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-wait .ant-steps-item-title {
  color: var(--acx-steps-form-steps-title-color);
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-container .ant-steps-item-tail {
  top: 3px;
  left: unset;
  width: var(--acx-steps-form-steps-step-size);
  padding: 11px 0 0;
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-container .ant-steps-item-tail::after {
  margin: 0 auto;
  display: block;
  background-color: var(--acx-steps-form-steps-step-color);
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-container .ant-steps-item-content {
  min-height: calc(var(--acx-body-4-line-height) * 2);
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-icon {
  width: var(--acx-steps-form-steps-step-size);
  height: var(--acx-steps-form-steps-step-size);
  top: unset;
  margin-top: 3px;
  margin-right: 0px;
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-icon .ant-steps-icon-dot {
  width: var(--acx-steps-form-steps-step-size);
  height: var(--acx-steps-form-steps-step-size);
  border: 1px solid var(--acx-steps-form-steps-step-color);
  background-color: transparent;
  top: unset;
  left: unset;
}

.c4.ant-steps-vertical .ant-steps-item .ant-steps-item-icon .ant-steps-icon-dot::after {
  top: 0;
  left: 0;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: transparent;
  -webkit-transition-property: top,left,background-color;
  transition-property: top,left,background-color;
}

.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-active .ant-steps-item-icon .ant-steps-icon-dot {
  top: unset;
  left: unset;
}

.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-active .ant-steps-item-icon .ant-steps-icon-dot::after {
  width: 10px;
  height: 10px;
  background-color: var(--acx-steps-form-steps-step-color);
}

.c4.ant-steps-vertical .ant-steps-item.ant-steps-item-finish .ant-steps-item-container .ant-steps-item-icon .ant-steps-icon-dot::after {
  top: 1px;
  left: 1px;
  background-color: var(--acx-steps-form-steps-step-color);
}

.c12 {
  position: fixed;
  width: calc( 100% - var(--acx-sider-width) - var(--acx-content-horizontal-space) * 2 );
  min-width: calc( 1280px - var(--acx-sider-width) - var(--acx-content-horizontal-space) * 2 );
  bottom: 0;
  padding: var(--acx-steps-form-actions-vertical-space) 0;
  background-color: var(--acx-neutrals-10);
  z-index: 5;
}

.c12::before {
  content: '';
  position: absolute;
  inset: 0 -100% 0 -100%;
  background-color: var(--acx-neutrals-10);
}

.c12 .ant-space-item .ant-space {
  position: absolute;
  left: 50%;
  bottom: var(--acx-steps-form-actions-vertical-space);
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
}

.c6 {
  font-size: var(--acx-steps-form-form-title-font-size);
  line-height: var(--acx-steps-form-form-title-line-height);
  font-weight: var(--acx-steps-form-form-title-font-weight);
  margin-bottom: var(--acx-steps-form-form-title-margin-bottom) !important;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 5px;
}

.c6 svg {
  width: 16px;
  height: 16px;
}

.c11.ant-typography {
  margin-top: 20px;
  margin-bottom: 12px;
}

.c5 + .c10.ant-typography {
  margin-top: 4px;
}

.c7,
.c7 .ant-list {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c7 .ant-checkbox-wrapper-in-form-item {
  color: var(--acx-neutrals-60);
}

.c7 .indent {
  margin-left: 24px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
}

.c7 .greyText {
  color: var(--acx-neutrals-50);
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: calc( var(--acx-header-height) + var(--acx-content-vertical-space) + (var(--acx-cloudmessagebanner-height) * var(--acx-has-cloudmessagebanner)) );
  z-index: 7;
  background-color: var(--acx-primary-white);
  padding: 0 var(--acx-content-horizontal-space);
  margin: 0 calc(var(--acx-content-horizontal-space) * -1);
}

.c1 .ant-page-header {
  padding: 0;
  margin: 4px 0 var(--acx-content-vertical-space);
}

.c1 .ant-page-header-heading {
  gap: 12px;
}

.c1 .ant-page-header-heading h1 {
  margin-bottom: 0;
}

.c1 .ant-page-header-heading-left {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
}

.c1 .ant-page-header-heading-extra {
  margin: 0;
}

.c1 .ant-page-header-heading-extra > .ant-space {
  gap: 12px !important;
}

.c1 .ant-page-header-heading-title {
  width: 100%;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .ant-page-header-content {
  padding: 6px 0 0;
  color: var(--acx-primary-black);
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c1 .ant-page-header-content .ant-divider-vertical {
  background-color: var(--acx-primary-black);
  margin: 0 0.5em;
  height: 0.9em;
}

.c1 .ant-page-header .ant-breadcrumb {
  line-height: 16px;
}

.c1 .ant-page-header .ant-breadcrumb a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 .ant-page-header .ant-breadcrumb + .ant-page-header-heading {
  margin-top: 3px;
}

.c1 .ant-page-header.has-footer {
  margin-bottom: 0;
}

.c1 .ant-page-header.has-footer .ant-page-header-content {
  padding-bottom: 2px;
}

.c1 .ant-page-header.has-footer .ant-page-header-footer {
  margin-top: 8px;
}

.c2 {
  width: 32px;
  height: 32px;
}

.c8 {
  position: relative;
  min-height: calc( 100vh - 0px - var(--acx-steps-form-actions-vertical-space) * 2 - 32px - var(--acx-content-horizontal-space) );
  border: 1px solid var(--acx-neutrals-25);
  border-radius: 4px;
  padding: 20px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="ant-page-header has-breadcrumb ant-page-header-ghost"
      >
        <nav
          class="ant-breadcrumb"
        >
          <ol>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                AI Assurance
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                AI Analytics
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                <a
                  href="/undefined/t/analytics/intentAI"
                >
                  IntentAI
                </a>
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                 
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
          </ol>
        </nav>
        <div
          class="ant-page-header-heading"
        >
          <div
            class="ant-page-header-heading-left"
          >
            <span
              class="ant-page-header-heading-title"
            >
              <svg
                class="c2"
                data-testid="AIDrivenRRM"
              />
              <h1
                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
              >
                AI-Driven RRM
              </h1>
            </span>
          </div>
        </div>
        <div
          class="ant-page-header-content"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
          >
            <span>
              Intent: Client density vs Client throughput
              <div
                class="ant-divider ant-divider-vertical"
                role="separator"
              />
            </span>
            <span>
              Venue: 
            </span>
          </span>
        </div>
      </div>
    </div>
    <section
      class="c3"
      data-testid="steps-form"
    >
      <form
        class="ant-form ant-form-vertical"
        step="2"
      >
        <div
          class="ant-row"
          style="margin-left: -10px; margin-right: -10px;"
        >
          <div
            class="ant-col ant-col-4"
            data-testid="steps-form-steps"
            style="padding-left: 10px; padding-right: 10px;"
          >
            <div
              class="ant-steps ant-steps-vertical c4 ant-steps-dot"
            >
              <div
                class="ant-steps-item ant-steps-item-finish"
              >
                <div
                  class="ant-steps-item-container"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Introduction
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-steps-item ant-steps-item-finish"
              >
                <div
                  class="ant-steps-item-container"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Intent Priority
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-steps-item ant-steps-item-process ant-steps-item-active"
              >
                <div
                  class="ant-steps-item-container"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Settings
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Summary
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-20"
            data-testid="steps-form-body"
            style="padding-left: 10px; padding-right: 10px;"
          >
            <div
              class="ant-row"
              style="margin-left: -10px; margin-right: -10px;"
            >
              <div
                class="ant-col ant-col-15"
                style="padding-left: 10px; padding-right: 10px;"
              >
                <h3
                  class="ant-typography c5 c6"
                >
                  Settings
                </h3>
                <div
                  class="c7"
                >
                  <div
                    class="ant-typography"
                  >
                    This recommendation will be applied at the chosen time whenever there is a need to change the channel plan. Schedule a time during off-hours when the number of WiFi clients is at the minimum.
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="settings_date"
                        title="Schedule Date"
                      >
                        Schedule Date
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-picker"
                            style="width: 100%;"
                          >
                            <div
                              class="ant-picker-input"
                            >
                              <input
                                autocomplete="off"
                                id="settings_date"
                                placeholder="Select date"
                                readonly=""
                                size="12"
                                title="2023-07-10"
                                value="2023-07-10"
                              />
                              <span
                                class="ant-picker-suffix"
                              >
                                <span
                                  aria-label="calendar"
                                  class="anticon anticon-calendar"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="calendar"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                class="ant-picker-clear"
                                role="button"
                              >
                                <span
                                  aria-label="close-circle"
                                  class="anticon anticon-close-circle"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close-circle"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        title="Schedule Time"
                      >
                        Schedule Time
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-col ant-col-24"
                          >
                            <select
                              id="settings_hour"
                              placeholder="Select hour"
                            >
                              <option />
                              <option
                                disabled=""
                                value="0"
                              >
                                00:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="0.25"
                              >
                                00:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="0.5"
                              >
                                00:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="0.75"
                              >
                                00:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="1"
                              >
                                01:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="1.25"
                              >
                                01:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="1.5"
                              >
                                01:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="1.75"
                              >
                                01:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="2"
                              >
                                02:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="2.25"
                              >
                                02:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="2.5"
                              >
                                02:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="2.75"
                              >
                                02:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="3"
                              >
                                03:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="3.25"
                              >
                                03:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="3.5"
                              >
                                03:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="3.75"
                              >
                                03:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="4"
                              >
                                04:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="4.25"
                              >
                                04:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="4.5"
                              >
                                04:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="4.75"
                              >
                                04:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="5"
                              >
                                05:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="5.25"
                              >
                                05:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="5.5"
                              >
                                05:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="5.75"
                              >
                                05:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="6"
                              >
                                06:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="6.25"
                              >
                                06:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="6.5"
                              >
                                06:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="6.75"
                              >
                                06:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="7"
                              >
                                07:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="7.25"
                              >
                                07:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="7.5"
                              >
                                07:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="7.75"
                              >
                                07:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="8"
                              >
                                08:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="8.25"
                              >
                                08:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="8.5"
                              >
                                08:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="8.75"
                              >
                                08:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="9"
                              >
                                09:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="9.25"
                              >
                                09:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="9.5"
                              >
                                09:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="9.75"
                              >
                                09:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="10"
                              >
                                10:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="10.25"
                              >
                                10:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="10.5"
                              >
                                10:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="10.75"
                              >
                                10:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="11"
                              >
                                11:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="11.25"
                              >
                                11:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="11.5"
                              >
                                11:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="11.75"
                              >
                                11:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="12"
                              >
                                12:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="12.25"
                              >
                                12:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="12.5"
                              >
                                12:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="12.75"
                              >
                                12:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="13"
                              >
                                13:00 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="13.25"
                              >
                                13:15 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="13.5"
                              >
                                13:30 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="13.75"
                              >
                                13:45 (UTC+00)
                              </option>
                              <option
                                disabled=""
                                value="14"
                              >
                                14:00 (UTC+00)
                              </option>
                              <option
                                value="14.25"
                              >
                                14:15 (UTC+00)
                              </option>
                              <option
                                value="14.5"
                              >
                                14:30 (UTC+00)
                              </option>
                              <option
                                value="14.75"
                              >
                                14:45 (UTC+00)
                              </option>
                              <option
                                value="15"
                              >
                                15:00 (UTC+00)
                              </option>
                              <option
                                value="15.25"
                              >
                                15:15 (UTC+00)
                              </option>
                              <option
                                value="15.5"
                              >
                                15:30 (UTC+00)
                              </option>
                              <option
                                value="15.75"
                              >
                                15:45 (UTC+00)
                              </option>
                              <option
                                value="16"
                              >
                                16:00 (UTC+00)
                              </option>
                              <option
                                value="16.25"
                              >
                                16:15 (UTC+00)
                              </option>
                              <option
                                value="16.5"
                              >
                                16:30 (UTC+00)
                              </option>
                              <option
                                value="16.75"
                              >
                                16:45 (UTC+00)
                              </option>
                              <option
                                value="17"
                              >
                                17:00 (UTC+00)
                              </option>
                              <option
                                value="17.25"
                              >
                                17:15 (UTC+00)
                              </option>
                              <option
                                value="17.5"
                              >
                                17:30 (UTC+00)
                              </option>
                              <option
                                value="17.75"
                              >
                                17:45 (UTC+00)
                              </option>
                              <option
                                value="18"
                              >
                                18:00 (UTC+00)
                              </option>
                              <option
                                value="18.25"
                              >
                                18:15 (UTC+00)
                              </option>
                              <option
                                value="18.5"
                              >
                                18:30 (UTC+00)
                              </option>
                              <option
                                value="18.75"
                              >
                                18:45 (UTC+00)
                              </option>
                              <option
                                value="19"
                              >
                                19:00 (UTC+00)
                              </option>
                              <option
                                value="19.25"
                              >
                                19:15 (UTC+00)
                              </option>
                              <option
                                value="19.5"
                              >
                                19:30 (UTC+00)
                              </option>
                              <option
                                value="19.75"
                              >
                                19:45 (UTC+00)
                              </option>
                              <option
                                value="20"
                              >
                                20:00 (UTC+00)
                              </option>
                              <option
                                value="20.25"
                              >
                                20:15 (UTC+00)
                              </option>
                              <option
                                value="20.5"
                              >
                                20:30 (UTC+00)
                              </option>
                              <option
                                value="20.75"
                              >
                                20:45 (UTC+00)
                              </option>
                              <option
                                value="21"
                              >
                                21:00 (UTC+00)
                              </option>
                              <option
                                value="21.25"
                              >
                                21:15 (UTC+00)
                              </option>
                              <option
                                value="21.5"
                              >
                                21:30 (UTC+00)
                              </option>
                              <option
                                value="21.75"
                              >
                                21:45 (UTC+00)
                              </option>
                              <option
                                value="22"
                              >
                                22:00 (UTC+00)
                              </option>
                              <option
                                value="22.25"
                              >
                                22:15 (UTC+00)
                              </option>
                              <option
                                value="22.5"
                              >
                                22:30 (UTC+00)
                              </option>
                              <option
                                value="22.75"
                              >
                                22:45 (UTC+00)
                              </option>
                              <option
                                value="23"
                              >
                                23:00 (UTC+00)
                              </option>
                              <option
                                value="23.25"
                              >
                                23:15 (UTC+00)
                              </option>
                              <option
                                value="23.5"
                              >
                                23:30 (UTC+00)
                              </option>
                              <option
                                value="23.75"
                              >
                                23:45 (UTC+00)
                              </option>
                            </select>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-7 ant-col-offset-2"
                style="padding-left: 10px; padding-right: 10px;"
              >
                <div
                  class="c8"
                >
                  <h4
                    class="ant-typography"
                  >
                    Side Notes
                  </h4>
                  <h4
                    class="ant-typography c9 c10 c11"
                  >
                    High number of clients in a dense network
                  </h4>
                  <div
                    class="c7"
                  >
                    <div
                      class="ant-typography"
                    >
                      High client density network requires low interfering channels which fosters improved throughput, lower latency, better signal quality, stable connections, enhanced user experience, longer battery life, efficient spectrum utilization, optimized channel usage, and reduced congestion, leading to higher data rates, higher SNR, consistent performance, and balanced network load.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-testid="steps-form-actions"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center "
          >
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn ant-btn-default c13"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 12px;"
                >
                  <button
                    class="ant-btn ant-btn-default c13"
                    type="button"
                    value="pre"
                  >
                    <span>
                      Back
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    ant-click-animating-without-extra-node="true"
                    class="ant-btn ant-btn-primary c13"
                    type="button"
                    value="next"
                  >
                    <span>
                      Next
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
</DocumentFragment>
`;
